--- a/web.config
+++ b/web.config
@@ -7,6 +7,10 @@
                     <match url="(.*)" />
                     <action type="Rewrite" url="http://http://localhost/3002/{R:1}" />
                 </rule>
+                <rule name="ReverseProxyInboundRule2" stopProcessing="true">
+                    <match url="(.*)" />
+                    <action type="Rewrite" url="http://3004/{R:1}" />
+                </rule>
             </rules>
         </rewrite>
     </system.webServer>
